# photoproject

./: .gitignore  README.md  pyproject.toml
core/: urls.py
core/settings/:  prod.py   test.py  base.py  local.py  staging.py
docker/: Dockerfile  compose.yml  nginx.conf
env/: .env.example
makefiles/: Makefile  Makefile.local
map/: services.py  urls.py
tags/: services.py  urls.py  views.py
tags/templates/tags/: index.html
templates/: main.html
